fix: make chat scrollbar not appear on chrome when uneeded

--- a/src/components/ManfredChat.css
+++ b/src/components/ManfredChat.css
@@ -15,7 +15,7 @@
   display: flex;
   flex-direction: column;
   max-height: 100%;
-  overflow: scroll;
+  overflow: auto;
   margin-top: auto;
   width: 100%;
 }
